--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -1076,6 +1076,12 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_018_Rpt.Designer.cs">
       <DependentUpon>CXP_018_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_019_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_019_Rpt.Designer.cs">
+      <DependentUpon>CXP_019_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Facturacion\FAC_001_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10443,6 +10449,7 @@
     <Content Include="Areas\Contabilidad\Views\GrupoPorTipoGasto\Modificar.cshtml" />
     <Content Include="Areas\Contabilidad\Views\GrupoPorTipoGasto\Anular.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_013.cshtml" />
+    <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_019.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Properties\PublishProfiles\PUBLICACION.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -10840,6 +10847,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_018_Rpt.resx">
       <DependentUpon>CXP_018_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_019_Rpt.resx">
+      <DependentUpon>CXP_019_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Facturacion\FAC_001_Rpt.resx">
       <DependentUpon>FAC_001_Rpt.cs</DependentUpon>
