--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -366,6 +366,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_015_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_016_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_017_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_020_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_001_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_002_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_003_Bus.cs" />
