--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -397,6 +397,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_015_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_016_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_017_Info.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_020_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_001_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_002_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_003_Info.cs" />
