--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10545,6 +10545,9 @@
     <Content Include="Areas\CuentasPorPagar\Views\TipoCodigoSRI\Consultar.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\CodigoSRI\Consultar.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\Consultar.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\Retencion\Consultar.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\NotaCredito\Consultar.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\NotaDebito\Consultar.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Properties\PublishProfiles\PUBLICACION.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
