--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Facturacion\fa_cuotas_x_doc_Bus.cs" />
     <Compile Include="Facturacion\fa_factura_Bus.cs" />
     <Compile Include="Facturacion\fa_factura_det_Bus.cs" />
+    <Compile Include="Facturacion\fa_factura_tipo_Bus.cs" />
     <Compile Include="Facturacion\fa_factura_x_fa_guia_remision_Bus.cs" />
     <Compile Include="Facturacion\fa_formaPago_Bus.cs" />
     <Compile Include="Facturacion\fa_guia_remision_Bus.cs" />
