--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10582,6 +10582,18 @@
     <Content Include="Areas\Facturacion\Views\FacturaTipo\Modificar.cshtml" />
     <Content Include="Areas\Facturacion\Views\FacturaTipo\Nuevo.cshtml" />
     <Content Include="Areas\Facturacion\Views\FacturaTipo\Anular.cshtml" />
+    <Content Include="Areas\Inventario\Views\Subgrupo\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\Linea\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\Grupo\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\ProductoTipo\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\TipoMovimiento\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\DevolucionInventario\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\IngresoInventarioOrdenCompra\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\EgresoInventario\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\IngresoInventario\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\TransferenciasInventario\Consultar.cshtml" />
+    <Content Include="Areas\Inventario\Views\Consignacion\Consultar.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Properties\PublishProfiles\PUBLICACION.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
