--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -190,6 +190,7 @@
     <Compile Include="CuentasPorPagar\cp_parametros_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_proveedor_clase_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_proveedor_Info.cs" />
+    <Compile Include="CuentasPorPagar\cp_proveedor_microempresa_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_retencion_det_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_retencion_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_retencion_x_ct_cbtecble_Info.cs" />
