--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -228,6 +228,7 @@
     <Compile Include="General\tb_region_Bus.cs" />
     <Compile Include="General\tb_sis_Documento_Tipo_Bus.cs" />
     <Compile Include="General\tb_sis_Documento_Tipo_Talonario_Bus.cs" />
+    <Compile Include="General\tb_sis_Documento_Tipo_x_Empresa_Bus.cs" />
     <Compile Include="General\tb_sis_Impuesto_Bus.cs" />
     <Compile Include="General\tb_sis_Impuesto_Tipo_Bus.cs" />
     <Compile Include="General\tb_sis_Impuesto_x_ctacble_Bus.cs" />
