--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -257,6 +257,7 @@
     <Compile Include="General\tb_region_Info.cs" />
     <Compile Include="General\tb_sis_Documento_Tipo_Info.cs" />
     <Compile Include="General\tb_sis_Documento_Tipo_Talonario_Info.cs" />
+    <Compile Include="General\tb_sis_Documento_Tipo_x_Empresa_Info.cs" />
     <Compile Include="General\tb_sis_Impuesto_Info.cs" />
     <Compile Include="General\tb_sis_Impuesto_Tipo_Info.cs" />
     <Compile Include="General\tb_sis_Impuesto_x_ctacble_Info.cs" />
