--- a/ERP/Core.Erp.Web/Web.config
+++ b/ERP/Core.Erp.Web/Web.config
@@ -15,7 +15,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Core.Erp.Web-20180324105414.mdf;Initial Catalog=aspnet-Core.Erp.Web-20180324105414;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ConnectionDB" connectionString="data source=10.100.5.140;initial catalog=DBERP;persist security info=True;user id=sa;password=admin*2016;" />
     <add name="Entities_general" connectionString="metadata=res://*/Model_general.csdl|res://*/Model_general.ssdl|res://*/Model_general.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.100.5.140;initial catalog=DBERP;persist security info=True;user id=sa;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Entities_activo_fijo" connectionString="metadata=res://*/Model_activo_fijo.csdl|res://*/Model_activo_fijo.ssdl|res://*/Model_activo_fijo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.100.5.140;initial catalog=DBERP;persist security info=True;user id=sa;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Entities_banco" connectionString="metadata=res://*/Model_banco.csdl|res://*/Model_banco.ssdl|res://*/Model_banco.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.100.5.140;initial catalog=DBERP;persist security info=True;user id=sa;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
