--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -166,6 +166,7 @@
     <Compile Include="CuentasPorCobrar\cxc_MotivoLiquidacionTarjeta_x_tb_sucursal_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_Parametro_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_LiquidacionRetProv_Info.cs" />
+    <Compile Include="CuentasPorCobrar\cxc_SeguimientoCartera_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_x_CtaCble_Info.cs" />
@@ -240,6 +241,8 @@
     <Compile Include="General\tb_CatalogoTipo_Info.cs" />
     <Compile Include="General\tb_Catalogo_Info.cs" />
     <Compile Include="General\tb_ciudad_Info.cs" />
+    <Compile Include="General\tb_ColaCorreoParametros_Info.cs" />
+    <Compile Include="General\tb_ColaCorreo_Info.cs" />
     <Compile Include="General\tb_ColaImpresionDirecta_Info.cs" />
     <Compile Include="General\tb_comprobantes_sin_autorizacion_Info.cs" />
     <Compile Include="General\tb_empresa_Info.cs" />
